--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         background: #734d26;
     }
     button:active {
-        color: #734d26;
-        background: #6cbfbc;
+        color: #520;
+        background: #499;
     }
     .row {
         padding: 4em;
@@ -128,10 +128,12 @@
     function setup() {
         ram.write(0x2000, 0x18); // clc
 //        ram.write(0x2000, 0x38); // sec
-        ram.write(0x2001, 0xa9); // lda
-        ram.write(0x2002, 0x60);
-        ram.write(0x2003, 0xe9); // sbc
-        ram.write(0x2004, 0x40);
+        ram.write(0x2001, 0xf8); // sed
+
+        ram.write(0x2002, 0xa9); // lda
+        ram.write(0x2003, 0xe0);
+        ram.write(0x2004, 0xe9); // sbc
+        ram.write(0x2005, 0xc0);
 
         for(let i=0; i<8; i++) {
             hexval[i].value = ram.read(0x2000 + i).toString(16).padStart(2, '0');
@@ -155,6 +157,7 @@
         }
         cycles += res;
 
+cpu.register.flag.b = true;
         update_regs(cpu.register);
         message("cycles: " + cycles, true);
 
