--- a/test/index.html
+++ b/test/index.html
@@ -155,7 +155,8 @@
 //        load_test(ram, test.dec.abs_x);
 //        load_test(ram, test.dec.accum);
 //        load_test(ram, test.dec.zp);
-        load_test(ram, test.dec.zp_x);
+//        load_test(ram, test.dec.zp_x);
+        load_test(ram, test.jsr.abs);
 
 
         // display memory
