added github link

--- a/test/index.html
+++ b/test/index.html
@@ -138,11 +138,13 @@
         <div><span></span><input> 200d <input type="checkbox"></div>
         <div><span></span><input> 200e <input type="checkbox"></div>
         <div><span></span><input> 200f <input type="checkbox"></div>
-    </div>
+      </div>
     </div>
 
     <div class="col3">
-        <canvas class="screen"></canvas>
+      <canvas class="screen"></canvas>
+      <div>&nbsp;</div><div>&nbsp;</div>
+      <div style="float:right;"><span>see it on <a target="_blank" href="https://github.com/inindev/65c02_emu">github</a>&nbsp;&nbsp;</span></div>
     </div>
   </div>
 
